# test_app_51831

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
data/cleaned/: phrases.csv
src/: configs.py  main.py
src/api/: health.py  setup.py
src/core/: datetime.py  enums.py
src/core/logging/: __init__.py  enums.py  logging.py
src/models/: vectors_model.py
src/pipelines/: calculate_phrases_distance.py  clean_phrases.py
tests/: constants.py
tests/endpoints/: conftest.py  test_health.py
